# amethyst_card_game

./: Cargo.toml  README.md
assets/board_game/: test.ron
assets/board_game/card/: FirstCard.ron
assets/board_game/player/: Enemy.ron  You.ron
assets/ui/: battle.ron  example.ron
config/: display.ron
src/: battle.rs  board_texture.rs  events.rs  load_battle.rs  main.rs  menu.rs  systems.rs
src/battle/: action_container.rs  action_ui.rs  big_icon.rs  board_ui.rs  card_ui.rs  end_turn_button.rs  input_state.rs  log_button.rs  message_log.rs  overlay.rs  ui_input.rs
src/board_game/: action.rs  board.rs  board_game.rs  board_resource.rs  card.rs  data.rs  game_move.rs  minimax.rs  mod.rs  player.rs  status_effect.rs  target_type.rs
