[package]
name = "amethyst_card_game"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] } 
itertools = "0.9.0"
rand = "0.7.2"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
